--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "react-is": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-chatbot": "0.0.1-alpha.12",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dialogflow": "^3.2.2",
     "react-native-elements": "^1.2.7",
     "react-native-emoji-selector": "^0.1.7",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-material-menu": "^1.0.0",
+    "react-native-modal": "^11.5.4",
     "react-native-popup-menu": "^0.15.6",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-voice": "^0.3.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15",
+    "react-navigation-stack": "^2.1.1",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
